fix: align team section to design

--- a/css/styles.css
+++ b/css/styles.css
@@ -1540,6 +1540,7 @@ iframe {
 
 .team-text {
   width: 483px;
+  padding-bottom: 44px;
 }
 
 .team-image {
